<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_22sdp"
        android:textStyle="bold"
        android:text="@string/create_a_new_account"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-15dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:autofillHints=""
       android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:textColor="@color/black"
        android:textColorHint="#421"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="@dimen/_22sdp"
         android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="#421"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="@dimen/_22sdp"
         android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        android:textColorHint="#421"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:autofillHints="" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/button"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.022"
        tools:layout_editor_absoluteX="0dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="@dimen/_18sdp"
        android:gravity="center"
        android:clickable="true"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
        android:focusable="true" />
</androidx.constraintlayout.widget.ConstraintLayout>